Reuploading file with link added

--- a/introductory_webpage.html
+++ b/introductory_webpage.html
@@ -6,6 +6,7 @@
   </head>
   <body bgcolor= "#6e6e6e">
 
+    <img src="jcwa249/302_webpage/darkcat.jpg" alt="Dark Cat" width="75">
 
     <br>
     <p font size="4"> <b>Author:</b> John W. <br>
