Changed font, added CSS background color, and added hobby.

--- a/introductory_webpage.html
+++ b/introductory_webpage.html
@@ -4,7 +4,15 @@
     <title>John's Webpage</title>
     <h2> John's Webpage </h2>
   </head>
-  <body bgcolor= "#6e6e6e">
+  <style media="screen">
+  body {
+    background-color:#c0c2c4;
+  }
+  p{
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
+  }
+  </style>
+
 
     <img src="jcwa249/302_webpage/darkcat.jpg" alt="Dark Cat" width="75">
 
@@ -53,7 +61,7 @@
         </tr>
         <td>
           <p>Outside of school, I am a musician. I play guitar, bass, and banjo. My other hobbies include reading&nbsp;
-          <br> and learning about world religions, and reading or writing poetry. &nbsp;&nbsp;<br>
+          <br> and learning about world religions, reading or writing poetry, and video games.<br>
           Other miscellaneous interests of mine are vintage computing, politics, thrash metal, doom metal,
           <br> gardening, and houseplants.</p>
         </td>
